Implemented full functionality of the chatting mechanism